feat(topology): add list for affinity key
Signed-off-by: sinhaashish <ashi.sinha.87@gmail.com>

--- a/control-plane/rest/openapi-specs/v0_api_spec.yaml
+++ b/control-plane/rest/openapi-specs/v0_api_spec.yaml
@@ -2502,15 +2502,18 @@ components:
         affinity  :
           example: ''
           description: |-
-            Includes resources with the same $label eg:
+            Includes resources with the same $label key eg:
              if label is "Zone":
              A resource matching the label is decided initially and
              all other resources are paired with the same label
              A resource with "Zone" would be choose the label as "Zone: A"
              and all other resoures will be paired with label "Zone: A"
-          type: object
-          additionalProperties:
+          type: array
+          items:
+            example: 'Zone'
             type: string
+          # additionalProperties:
+          #   type: string
       required:
         - exclusion
         - inclusion
