--- a/control-plane/agents/Cargo.toml
+++ b/control-plane/agents/Cargo.toml
@@ -2,7 +2,6 @@
 name = "agents"
 description = "Control plane agent"
 version = "1.0.0"
-authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
 edition = "2021"
 
 [lib]
@@ -22,12 +21,12 @@ name = "jsongrpc"
 path = "src/bin/jsongrpc/main.rs"
 
 [[bin]]
- name = "agent-ha-node"
- path = "src/bin/ha/node/main.rs"
+name = "agent-ha-node"
+path = "src/bin/ha/node/main.rs"
 
 [[bin]]
- name = "agent-ha-cluster"
- path = "src/bin/ha/cluster/main.rs"
+name = "agent-ha-cluster"
+path = "src/bin/ha/cluster/main.rs"
 
 [dependencies]
 anyhow = "1.0.92"
@@ -35,7 +34,7 @@ uuid = { version = "1.11.0", features = ["serde", "v4"] }
 chrono = "0.4.38"
 clap = { version = "4.5.20", features = ["color", "derive", "env", "string"] }
 tokio = { version = "1.41.0", features = ["full"] }
-tonic = "0.10.2"
+tonic = "0.12.3"
 futures = "0.3.31"
 serde_json = "1.0.132"
 async-trait = "0.1.83"
@@ -43,7 +42,7 @@ dyn-clonable = "0.9.0"
 snafu = "0.8.5"
 humantime = "2.1.0"
 state = "0.6.0"
-http = "0.2.9"
+http = "1.1.0"
 reqwest = "0.12.9"
 parking_lot = "0.12.3"
 itertools = "0.13.0"
@@ -51,17 +50,18 @@ once_cell = "1.20.2"
 indexmap = "2.6.0"
 futures-util = { version = "0.3.31" }
 crossbeam-queue = "0.3.11"
-tower = { version = "0.4.13", features = [ "timeout", "util" ] }
-hyper = { version = "0.14.27", features = [ "client", "http1", "http2", "tcp", "stream" ] }
-opentelemetry = { version = "0.22.0" }
+tower = { version = "0.5.1", features = ["timeout", "util"] }
+hyper-util = "0.1.10"
+hyper = { version = "1.5.0", features = ["client", "http1", "http2"] }
+opentelemetry = { version = "0.26.0" }
 tracing = "0.1.40"
 nix = { version = "0.29.0", default-features = false }
-prost-types = "0.12.1"
+prost-types = "0.13.3"
 url = "2.5.2"
 
 grpc = { path = "../grpc" }
 shutdown = { path = "../../utils/shutdown" }
-rpc =  { path = "../../rpc"}
+rpc = { path = "../../rpc" }
 stor-port = { path = "../stor-port" }
 utils = { path = "../../utils/utils-lib" }
 nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
